--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tasty Treats & Juices | Caribbean-Inspired Cold-Pressed Juices for Offices</title>
+  <title>Tasty Treats & Juices | Caribbean-Inspired Cold-Pressed Juices</title>
   <meta name="description" content="Small-batch, cold-pressed juices with real fruit and spices. No artificial anything. Turnkey micro-kitchen and event service for happier, more energized teams." />
 
   <!-- Calming, soft font -->
