--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         <article class="card" role="listitem">
           <img class="img-card" src="./images/2.webp" alt="Orange, apple, turmeric and ginger ingredients beside a chilled juice" loading="lazy" decoding="async" />
           <h3>Orange • Apple • Turmeric • Ginger</h3>
-          <p class="muted">A citrus‑spice refresher with a warm, golden finish.</p>
-          <p><em>Highlights:</em> Rich in vitamin C and antioxidants; turmeric (curcumin) and ginger (gingerols) are widely studied for anti‑inflammatory and digestive support. A clean, zesty pick‑me‑up for mid‑day slumps.</p>
+          <p class="muted">A bright, fruit-forward blend with a warm, earthy lift.</p>
+          <p><em>Highlights:</em> Naturally high in vitamin C and immune-supportive phytonutrients; apples provide gentle sweetness and polyphenols, while turmeric (curcumin) and ginger (gingerols) are known for anti-inflammatory and digestive benefits. A smooth, energizing boost for any time of day.</p>
         </article>
         <article class="card" role="listitem">
           <img class="img-card" src="./images/3.webp" alt="Beets, carrots, apple and ginger arranged with a glass of juice" loading="lazy" decoding="async" />
@@ -308,7 +308,7 @@
         <p>
           <a class="btn" href="mailto:hello@tastytreatsandjuices.com">Email us</a>
           &nbsp; or &nbsp;
-          <a href="tel:+15551234567">(555) 123‑4567</a>
+          <a href="tel:+18603249704">(860) 324‑9704</a>
         </p>
       </div>
     </div>
@@ -345,3 +345,4 @@
   </script>
 </body>
 </html>
+
